fix: page layout no longer jumps when scrollbar appears

--- a/redesign/client-redesign/src/assets/styles/fixes/_sizing.scss
+++ b/redesign/client-redesign/src/assets/styles/fixes/_sizing.scss
@@ -6,6 +6,7 @@
 
 html {
     box-sizing: border-box;
+    margin-left: calc(100vw - 100%);
 }
 
 *,
